src/sql/kernel/qsqldatabase.cpp
@@ -138,10 +138,7 @@ public:
         port(-1)
     {
         ref = 1;
-        if(driver)
-            precisionPolicy = driver->numericalPrecisionPolicy();
-        else
-            precisionPolicy= QSql::LowPrecisionDouble;
+        precisionPolicy= QSql::LowPrecisionDouble;
     }
     QSqlDatabasePrivate(const QSqlDatabasePrivate &other);
     ~QSqlDatabasePrivate();
